--- a/T-appendix.jupyter-installation-and-setup.ipynb
+++ b/T-appendix.jupyter-installation-and-setup.ipynb
@@ -432,7 +432,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## 输出所有变量内容"
    ]
@@ -527,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +538,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,13 +548,13 @@
        "{1, 2, 3}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "from IPython.core. imp InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "(1, 2, 3)\n",
@@ -653,10 +655,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
-  "toc-autonumbering": true
+  "toc-autonumbering": true,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
