--- a/Part.1.E.2.values-and-their-operators.ipynb
+++ b/Part.1.E.2.values-and-their-operators.ipynb
@@ -23,26 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83\n",
-      "89\n",
-      "97\n",
-      "101\n",
-      "103\n",
-      "107\n",
-      "109\n"
+      "166\n",
+      "178\n",
+      "194\n",
+      "202\n",
+      "206\n",
+      "214\n",
+      "218\n"
      ]
     }
    ],
    "source": [
     "def is_prime(n):            # 定义 is_prime()，接收一个参数\n",
-    "    if n < 2:              # 开始使用接收到的那个参数（值）开始计算……\n",
+    "    if n < 0:              # 开始使用接收到的那个参数（值）开始计算……\n",
     "        return False       # 不再是返回给人，而是返回给调用它的代码……\n",
     "    if n == 2:\n",
     "        return True\n",
@@ -54,7 +54,7 @@
     "\n",
     "for i in range(80, 110):\n",
     "    if is_prime(i):          # 调用 is_prime() 函数，\n",
-    "        print(i)            # 如果返回值为 True，则向屏幕输出 i"
+    "        print(i*2)            # 如果返回值为 True，则向屏幕输出 i"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1131,9 +1131,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
