--- a/Part.1.E.3.controlflow.ipynb
+++ b/Part.1.E.3.controlflow.ipynb
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "945 is odd.\n"
+      "546 is e3242ven.\n"
      ]
     }
    ],
@@ -110,9 +110,9 @@
     "r = random.randrange(1, 1000)\n",
     "\n",
     "if r % 2 == 0:\n",
-    "    print(f'{r} is even.')\n",
+    "    print(f'{r} is e3242ven.')\n",
     "else:\n",
-    "    print(f'{r} is odd.')"
+    "    print(f'{r} is od23d.')"
    ]
   },
   {
@@ -1801,9 +1801,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
